# wzrdbrain

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  PLAN.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml  translate2js.yml
dart/wzrdbrain/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
dart/wzrdbrain/.dart_tool/: package_config.json  package_graph.json
dart/wzrdbrain/.dart_tool/test/: incremental_kernel.Ly9AZGFydD0zLjA=
dart/wzrdbrain/lib/: wzrdbrain.dart
dart/wzrdbrain/lib/src/: trick.dart  trick_data.dart
dart/wzrdbrain/test/: wzrdbrain_test.dart
docs/: api_reference.md  apireference.md  combinations.md  index.md  moves_research.md  pr23_review.md  translate2js.md  trick_object.md  usage.md
slm/: GUIDE.md  config.yaml  evaluate.py  generate_data.py  push_to_hub.py  requirements.txt  train.py
slm/data/: test.jsonl  val.jsonl
slm/knowledge/: learning_progressions.json  trick_descriptions.json
slm/space/: app.py
src/wzrdbrain/: __init__.py  move_schema.json  moves.json  translate2js.py  tricks.json  wzrdbrain.js  wzrdbrain.py  wzrdbrain.src.js
tests/: show_examples.py  simulate_continuity.py  test_wzrdbrain.py
utils/: translate2js.py  wzrdbrain.base.js
