[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "wzrdbrain"
version = "0.1.0"
description = "Basic APIs to generate tricks for wizard skating."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "nazroll" }
]
keywords = ["wizard skating", "tricks", "random", "generator"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
  "Topic :: Games/Entertainment",
  "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "black>=24.3",
  "mypy>=1.10",
  "build>=1.2",
]

[project.urls]
Homepage = "https://github.com/nazroll/wzrdbrain"
Documentation = "https://github.com/nazroll/wzrdbrain#readme"
Repository = "https://github.com/nazroll/wzrdbrain"
Issues = "https://github.com/nazroll/wzrdbrain/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wzrdbrain"]

[tool.ruff]
line-length = 100
target-version = "py39"
lint.extend-select = ["Q", "UP"]
lint.extend-ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true